--- a/math2/hw5/main.tex
+++ b/math2/hw5/main.tex
@@ -496,5 +496,27 @@ We can repeat this for every \(v_i\). And at the end we will have:
    \langle v_1 - v_2, v_2 - v_3, ..., v_n \rangle = \langle v_1, v_2, ..., v_n \rangle
 \]
 
+\subsection*{(b)}
+If \(v_1, v_2, ..., v_n\) are linearly independent means that the only solution to the equation
+\[
+   a_1 v_1 + a_2 v_2 + ... + a_n v_n = 0
+\]
+is \(a_1 = a_2 = ... = a_n = 0\). \\
+
+We want to show that the only solution to the equation
+\[
+   b_1 (v_1 - v_2) + b_2 (v_2 - v_3) + ... + b_n (v_n) = 0
+\]
+is \(b_1 = b_2 = ... = b_n = 0\). \\
+We can write this as:
+\[
+   b_1 v_1 + (b_2 - b_1) v_2 + (b_3 - b_2) v_3 + ... + b_n v_n = 0
+\]
+and since \(v_1, v_2, ..., v_n\) are linearly independent, we have:
+\[
+   b_1 = 0, b_2 - b_1 = 0, b_3 - b_2 = 0, ..., b_n = 0
+\]
+   This means that \(b_1 = b_2 = ... = b_n = 0\).
+
 
 \end{document}
