--- a/math2/hw6/main.tex
+++ b/math2/hw6/main.tex
@@ -263,6 +263,21 @@ If \(u + v \in U_2\), since \(v \in U_2\) and \(U_2\) is a subspace \((u+v)-v=u 
 Thus, we have a contradiction. \\
 Thus, one of the sets must contain the other. \\
 
+\subsection*{(b)}
+
+Let's just check if \(U_1 + U_2\) is empty, closed under addition and closed under scalar multiplication. \\
+\textbf{Not empty:} \\
+\(U_1 + U_2\) is not empty because \(0 \in U_1 + U_2\) \\
+\textbf{Closed under addition:} \\
+Let \(u_1, u_2 \in U_1\) and \(v_1, v_2 \in U_2\). Then \(u_1 + v_1 \in U_1 + U_2\) and \(u_2 + v_2 \in U_1 + U_2\). \\
+Then, \((u_1 + v_1) + (u_2 + v_2) = (u_1 + u_2) + (v_1 + v_2)\). \\
+Since \(U_1\) and \(U_2\) are subspaces, \(u_1 + u_2 \in U_1\) and \(v_1 + v_2 \in U_2\). \\
+Thus, \((u_1 + u_2) + (v_1 + v_2) \in U_1 + U_2\). \\
+\textbf{Closed under scalar multiplication:} \\
+Let \(u \in U_1\) and \(v \in U_2\). Then \(u + v \in U_1 + U_2\) \\
+Then, \(c(u + v) = cu + cv\). \\
+Since \(U_1\) and \(U_2\) are subspaces, \(cu \in U_1\) and \(cv \in U_2\). \\
+Thus, \(c(u + v) \in U_1 + U_2\). \\
 
 
 \end{document}
