--- a/math2/hw7/main.tex
+++ b/math2/hw7/main.tex
@@ -89,5 +89,134 @@ A transformation T is linear if and only if it satisfies the following two prope
     \item \( T: \mathbb{R}^n[x] \to \mathbb{R}^{n+2}[x], p(x) \mapsto x^2p(x) \) is linear.
 \end{enumerate}
 
+\section*{Problem 2}
+
+% 2. (a) Let T : R
+% 3 → R
+% 3 be the linear transformation defined by the formula
+% T
+% 
+% 
+% x
+% y
+% z
+% 
+%  =
+% 
+% 
+% x − y
+% x + 2y − z
+% 2x + y + z
+% 
+%  .
+% Find the matrix of T with respect to the usual basis for R
+% 3
+% .
+% (b) Let n ∈ N and T : Rn[x] → Rn[x] be the linear transformation defined by
+% (T(p))(x) = p(x + 1).
+% Find the matrix of T with respect to the usual basis for Rn[x].
+% (c) Let T : R
+% 2×2 → R
+% 2×2 be the linear transformation defined by the formula
+% T
+% 
+% a b
+% c d 
+% =
+% 
+% a 2b
+% 3c 4d
+% 
+% .
+% Find the matrix of T with respect to the usual basis for R
+% 2×2
+
+\subsection*{(a)}
+
+The way we construct the matrix given a linear transformation is that we take the each basis vector and apply the
+transformation to it and write the result to corresponding column of the matrix.
+
+\begin{align*}
+   T(e_1) &= T(1, 0, 0) = (1 - 0, 1 + 2 \cdot 0 - 0, 2 \cdot 1 + 0 + 0) = (1, 1, 2) \\
+   T(e_2) &= T(0, 1, 0) = (0 - 1, 0 + 2 \cdot 1 - 0, 2 \cdot 0 + 1 + 0) = (-1, 2, 1) \\
+   T(e_3) &= T(0, 0, 1) = (0 - 0, 0 + 2 \cdot 0 - 1, 2 \cdot 0 + 0 + 1) = (0, -1, 1)
+\end{align*}
+Put each result as a column in the matrix \( A \):
+\[
+   A = \begin{pmatrix}
+       1 & -1 & 0 \\
+       1 & 2 & -1 \\
+       2 & 1 & 1
+   \end{pmatrix}
+\]
+
+\subsection*{(b)}
+The standard basis looks like this: \(\{1, x, ..., x^n\}\)
+\begin{align*}
+   T(1) &= 1 \\
+   T(x) &= x + 1 \\
+   T(x^2) &= (x + 1)^2 = x^2 + 2x + 1 \\
+   &\vdots \\
+   T(x^k) &= (x + 1)^k = \sum_{i=0}^{k} \binom{k}{i}x^i \\
+   &\vdots \\
+   T(x^n) &= (x + 1)^n
+\end{align*}
+
+\[
+   m_{i,j} =
+      \begin{cases}
+         \binom{j}{i} & \text{if } 0 \leq i \leq j \leq n \\
+         0            & \text{if } i > j
+      \end{cases}
+\]
+
+Each column of the matrix has the coefficients of a binomial expansion of \( (x + 1)^k \) for \( k = 0, 1, \ldots, n \).
+For example the first column looks like this:
+\[
+   \begin{pmatrix}
+      1 \\
+      0 \\
+      0 \\
+      \vdots \\
+      0
+   \end{pmatrix}
+\]
+The second column looks like this:
+\[
+   \begin{pmatrix}
+      1 \\
+      1 \\
+      0 \\
+      \vdots \\
+      0
+   \end{pmatrix}
+\]
+
+\subsection*{(c)}
+
+The standard basis of \( \mathbb{R}^{2 \times 2} \) is:
+\[
+   E_{11} = \begin{pmatrix} 1 & 0 \\ 0 & 0 \end{pmatrix}, \quad
+   E_{12} = \begin{pmatrix} 0 & 1 \\ 0 & 0 \end{pmatrix}, \quad
+   E_{21} = \begin{pmatrix} 0 & 0 \\ 1 & 0 \end{pmatrix}, \quad
+   E_{22} = \begin{pmatrix} 0 & 0 \\ 0 & 1 \end{pmatrix}
+\]
+We compute \( T(E_{ij}) \) for each basis element:
+\begin{align*}
+   T(E_{11}) &= T\left(\begin{pmatrix} 1 & 0 \\ 0 & 0 \end{pmatrix}\right) = \begin{pmatrix} 1 & 0 \\ 0 & 0 \end{pmatrix} = E_{11} \\
+   T(E_{12}) &= T\left(\begin{pmatrix} 0 & 1 \\ 0 & 0 \end{pmatrix}\right) = \begin{pmatrix} 0 & 2 \\ 0 & 0 \end{pmatrix} = 2E_{12} \\
+   T(E_{21}) &= T\left(\begin{pmatrix} 0 & 0 \\ 1 & 0 \end{pmatrix}\right) = \begin{pmatrix} 0 & 0 \\ 3 & 0 \end{pmatrix} = 3E_{21} \\
+   T(E_{22}) &= T\left(\begin{pmatrix} 0 & 0 \\ 0 & 1 \end{pmatrix}\right) = \begin{pmatrix} 0 & 0 \\ 0 & 4 \end{pmatrix} = 4E_{22}
+\end{align*}
+Thus, the matrix of \( T \) with respect to the basis \( \{E_{11}, E_{12}, E_{21}, E_{22}\} \) is:
+\[
+   A = \begin{pmatrix}
+       1 & 0 & 0 & 0 \\
+       0 & 2 & 0 & 0 \\
+       0 & 0 & 3 & 0 \\
+       0 & 0 & 0 & 4
+   \end{pmatrix}
+\]
+
 
 \end{document}
