--- a/math2/hw7/main.tex
+++ b/math2/hw7/main.tex
@@ -218,5 +218,2925 @@ Thus, the matrix of \( T \) with respect to the basis \( \{E_{11}, E_{12}, E_{21
    \end{pmatrix}
 \]
 
+\section*{Problem 3}
+
+% We are given:
+
+% 𝑀
+% 1
+% =
+% (
+% 1
+% 0
+% 1
+% )
+% (
+% 3
+% ×
+% 1
+% )
+% ,
+% 𝑀
+% 2
+% =
+% (
+%  
+% 2
+%   
+% −
+%  ⁣
+% 1
+%   
+% 3
+%  
+% )
+% (
+% 1
+% ×
+% 3
+% )
+% ,
+% 𝑀
+% 3
+% =
+% (
+% 4
+% 2
+% 1
+% 3
+% −
+% 1
+% 1
+% )
+% (
+% 3
+% ×
+% 2
+% )
+% ,
+% 𝑀
+% 4
+% =
+% (
+% 4
+% 1
+% 2
+% 3
+% )
+% (
+% 2
+% ×
+% 2
+% )
+% ,
+% 𝑀
+% 5
+% =
+% (
+% 2
+% −
+% 1
+% 1
+% 3
+% 1
+% −
+% 1
+% )
+% (
+% 2
+% ×
+% 3
+% )
+% ,
+% 𝑀
+% 6
+% =
+% (
+% 1
+% 2
+% 1
+% 2
+% 3
+% 2
+% 3
+% 4
+% 3
+% )
+% (
+% 3
+% ×
+% 3
+% )
+% .
+% M 
+% 1
+% ​
+ 
+% M 
+% 3
+% ​
+ 
+% M 
+% 5
+% ​
+ 
+% ​
+  
+% = 
+% ​
+  
+% 1
+% 0
+% 1
+% ​
+  
+% ​
+%  (3×1),
+% = 
+% ​
+  
+% 4
+% 1
+% −1
+% ​
+  
+% 2
+% 3
+% 1
+% ​
+  
+% ​
+%  (3×2),
+% =( 
+% 2
+% 3
+% ​
+  
+% −1
+% 1
+% ​
+  
+% 1
+% −1
+% ​
+%  )(2×3),
+% ​
+  
+% M 
+% 2
+% ​
+ 
+% M 
+% 4
+% ​
+ 
+% M 
+% 6
+% ​
+ 
+% ​
+  
+% =(2−13)(1×3),
+% =( 
+% 4
+% 2
+% ​
+  
+% 1
+% 3
+% ​
+%  )(2×2),
+% = 
+% ​
+  
+% 1
+% 2
+% 3
+% ​
+  
+% 2
+% 3
+% 4
+% ​
+  
+% 1
+% 2
+% 3
+% ​
+  
+% ​
+%  (3×3).
+% ​
+ 
+% We compute 
+% 𝑀
+% 𝑖
+% 𝑀
+% 𝑗
+% M 
+% i
+% ​
+%  M 
+% j
+% ​
+%   only when the inner dimensions match (i.e.\ 
+% (columns of 
+% 𝑀
+% 𝑖
+% )
+% =
+% (rows of 
+% 𝑀
+% 𝑗
+% )
+% (columns of M 
+% i
+% ​
+%  )=(rows of M 
+% j
+% ​
+%  )).
+
+% 𝑀
+% 1
+% (
+% 3
+% ×
+% 1
+% )
+% ×
+% 𝑀
+% 2
+% (
+% 1
+% ×
+% 3
+% )
+%   
+% →
+%   
+% (
+% 3
+% ×
+% 3
+% )
+% M 
+% 1
+% ​
+%  (3×1)×M 
+% 2
+% ​
+%  (1×3)→(3×3).
+
+% 𝑀
+% 1
+%   
+% =
+%   
+% (
+% 1
+% 0
+% 1
+% )
+% ,
+% 𝑀
+% 2
+% =
+% (
+% 2
+% ,
+%  
+% −
+% 1
+% ,
+%   
+% 3
+% )
+% .
+% M 
+% 1
+% ​
+%  = 
+% ​
+  
+% 1
+% 0
+% 1
+% ​
+  
+% ​
+%  ,M 
+% 2
+% ​
+%  =(2,−1,3).
+% Then
+
+% 𝑀
+% 1
+%  
+% 𝑀
+% 2
+% =
+% (
+% 1
+% 0
+% 1
+% )
+%  
+% (
+% 2
+% ,
+%  
+% −
+% 1
+% ,
+%  
+% 3
+% )
+% =
+% (
+% 1
+% ⋅
+% 2
+% 1
+% ⋅
+% (
+% −
+% 1
+% )
+% 1
+% ⋅
+% 3
+% 0
+% ⋅
+% 2
+% 0
+% ⋅
+% (
+% −
+% 1
+% )
+% 0
+% ⋅
+% 3
+% 1
+% ⋅
+% 2
+% 1
+% ⋅
+% (
+% −
+% 1
+% )
+% 1
+% ⋅
+% 3
+% )
+% =
+% (
+% 2
+% −
+% 1
+% 3
+% 0
+% 0
+% 0
+% 2
+% −
+% 1
+% 3
+% )
+% .
+% M 
+% 1
+% ​
+%  M 
+% 2
+% ​
+%  = 
+% ​
+  
+% 1
+% 0
+% 1
+% ​
+  
+% ​
+%  (2,−1,3)= 
+% ​
+  
+% 1⋅2
+% 0⋅2
+% 1⋅2
+% ​
+  
+% 1⋅(−1)
+% 0⋅(−1)
+% 1⋅(−1)
+% ​
+  
+% 1⋅3
+% 0⋅3
+% 1⋅3
+% ​
+  
+% ​
+%  = 
+% ​
+  
+% 2
+% 0
+% 2
+% ​
+  
+% −1
+% 0
+% −1
+% ​
+  
+% 3
+% 0
+% 3
+% ​
+  
+% ​
+%  .
+% 𝑀
+% 2
+% (
+% 1
+% ×
+% 3
+% )
+% ×
+% 𝑀
+% 1
+% (
+% 3
+% ×
+% 1
+% )
+%   
+% →
+%   
+% (
+% 1
+% ×
+% 1
+% )
+% M 
+% 2
+% ​
+%  (1×3)×M 
+% 1
+% ​
+%  (3×1)→(1×1).
+
+% 𝑀
+% 2
+%  
+% 𝑀
+% 1
+%   
+% =
+%   
+% (
+%  
+% 2
+% ,
+%  
+% −
+% 1
+% ,
+%  
+% 3
+% )
+%   
+% (
+% 1
+% 0
+% 1
+% )
+%   
+% =
+%   
+% 2
+% ⋅
+% 1
+%   
+% +
+%   
+% (
+% −
+% 1
+% )
+% ⋅
+% 0
+%   
+% +
+%   
+% 3
+% ⋅
+% 1
+%   
+% =
+%   
+% 5
+% ,
+% M 
+% 2
+% ​
+%  M 
+% 1
+% ​
+%  =(2,−1,3) 
+% ​
+  
+% 1
+% 0
+% 1
+% ​
+  
+% ​
+%  =2⋅1+(−1)⋅0+3⋅1=5,
+% so 
+% 𝑀
+% 2
+%  
+% 𝑀
+% 1
+% =
+% [
+%  
+% 5
+%  
+% ]
+% M 
+% 2
+% ​
+%  M 
+% 1
+% ​
+%  =[5].
+
+% 𝑀
+% 2
+% (
+% 1
+% ×
+% 3
+% )
+% ×
+% 𝑀
+% 3
+% (
+% 3
+% ×
+% 2
+% )
+%   
+% →
+%   
+% (
+% 1
+% ×
+% 2
+% )
+% M 
+% 2
+% ​
+%  (1×3)×M 
+% 3
+% ​
+%  (3×2)→(1×2).
+
+% 𝑀
+% 2
+% =
+% (
+%  
+% 2
+% ,
+%  
+% −
+% 1
+% ,
+%  
+% 3
+% )
+% ,
+% 𝑀
+% 3
+% =
+% (
+% 4
+% 2
+% 1
+% 3
+% −
+% 1
+% 1
+% )
+% .
+% M 
+% 2
+% ​
+%  =(2,−1,3),M 
+% 3
+% ​
+%  = 
+% ​
+  
+% 4
+% 1
+% −1
+% ​
+  
+% 2
+% 3
+% 1
+% ​
+  
+% ​
+%  .
+% Compute
+
+% 𝑀
+% 2
+%  
+% 𝑀
+% 3
+% =
+% (
+% 2
+% ,
+%  
+% −
+% 1
+% ,
+%  
+% 3
+% )
+%  
+% (
+% 4
+% 2
+% 1
+% 3
+% −
+% 1
+% 1
+% )
+% =
+% (
+%  
+% 2
+% ⋅
+% 4
+% +
+% (
+% −
+% 1
+% )
+% ⋅
+% 1
+% +
+% 3
+% ⋅
+% (
+% −
+% 1
+% )
+% ,
+% 2
+% ⋅
+% 2
+% +
+% (
+% −
+% 1
+% )
+% ⋅
+% 3
+% +
+% 3
+% ⋅
+% 1
+% )
+% =
+% (
+%  
+% 8
+% −
+% 1
+% −
+% 3
+% ,
+%   
+% 4
+% −
+% 3
+% +
+% 3
+% )
+% =
+% (
+%  
+% 4
+% ,
+%   
+% 4
+%  
+% )
+% .
+% M 
+% 2
+% ​
+%  M 
+% 3
+% ​
+%  =(2,−1,3) 
+% ​
+  
+% 4
+% 1
+% −1
+% ​
+  
+% 2
+% 3
+% 1
+% ​
+  
+% ​
+%  =(2⋅4+(−1)⋅1+3⋅(−1),2⋅2+(−1)⋅3+3⋅1)=(8−1−3,4−3+3)=(4,4).
+% 𝑀
+% 2
+% (
+% 1
+% ×
+% 3
+% )
+% ×
+% 𝑀
+% 6
+% (
+% 3
+% ×
+% 3
+% )
+%   
+% →
+%   
+% (
+% 1
+% ×
+% 3
+% )
+% M 
+% 2
+% ​
+%  (1×3)×M 
+% 6
+% ​
+%  (3×3)→(1×3).
+
+% 𝑀
+% 6
+% =
+% (
+% 1
+% 2
+% 1
+% 2
+% 3
+% 2
+% 3
+% 4
+% 3
+% )
+% .
+% M 
+% 6
+% ​
+%  = 
+% ​
+  
+% 1
+% 2
+% 3
+% ​
+  
+% 2
+% 3
+% 4
+% ​
+  
+% 1
+% 2
+% 3
+% ​
+  
+% ​
+%  .
+% Then
+
+% 𝑀
+% 2
+%  
+% 𝑀
+% 6
+% =
+% (
+%  
+% 2
+% ,
+%  
+% −
+% 1
+% ,
+%  
+% 3
+% )
+%  
+% (
+% 1
+% 2
+% 1
+% 2
+% 3
+% 2
+% 3
+% 4
+% 3
+% )
+% =
+% (
+%  
+% 2
+% ⋅
+% 1
+% +
+% (
+% −
+% 1
+% )
+% ⋅
+% 2
+% +
+% 3
+% ⋅
+% 3
+% ,
+%   
+% 2
+% ⋅
+% 2
+% +
+% (
+% −
+% 1
+% )
+% ⋅
+% 3
+% +
+% 3
+% ⋅
+% 4
+% ,
+%   
+% 2
+% ⋅
+% 1
+% +
+% (
+% −
+% 1
+% )
+% ⋅
+% 2
+% +
+% 3
+% ⋅
+% 3
+% )
+% .
+% M 
+% 2
+% ​
+%  M 
+% 6
+% ​
+%  =(2,−1,3) 
+% ​
+  
+% 1
+% 2
+% 3
+% ​
+  
+% 2
+% 3
+% 4
+% ​
+  
+% 1
+% 2
+% 3
+% ​
+  
+% ​
+%  =(2⋅1+(−1)⋅2+3⋅3,2⋅2+(−1)⋅3+3⋅4,2⋅1+(−1)⋅2+3⋅3).
+% Compute entries:
+
+% 2
+% −
+% 2
+% +
+% 9
+% =
+% 9
+% ,
+% 4
+% −
+% 3
+% +
+% 12
+% =
+% 13
+% ,
+% 2
+% −
+% 2
+% +
+% 9
+% =
+% 9.
+% 2−2+9=9,4−3+12=13,2−2+9=9.
+% So 
+% 𝑀
+% 2
+%  
+% 𝑀
+% 6
+% =
+% (
+%  
+% 9
+% ,
+%   
+% 13
+% ,
+%   
+% 9
+%  
+% )
+% M 
+% 2
+% ​
+%  M 
+% 6
+% ​
+%  =(9,13,9).
+
+% 𝑀
+% 3
+% (
+% 3
+% ×
+% 2
+% )
+% ×
+% 𝑀
+% 4
+% (
+% 2
+% ×
+% 2
+% )
+%   
+% →
+%   
+% (
+% 3
+% ×
+% 2
+% )
+% M 
+% 3
+% ​
+%  (3×2)×M 
+% 4
+% ​
+%  (2×2)→(3×2).
+
+% 𝑀
+% 3
+% =
+% (
+% 4
+% 2
+% 1
+% 3
+% −
+% 1
+% 1
+% )
+% ,
+% 𝑀
+% 4
+% =
+% (
+% 4
+% 1
+% 2
+% 3
+% )
+% .
+% M 
+% 3
+% ​
+%  = 
+% ​
+  
+% 4
+% 1
+% −1
+% ​
+  
+% 2
+% 3
+% 1
+% ​
+  
+% ​
+%  ,M 
+% 4
+% ​
+%  =( 
+% 4
+% 2
+% ​
+  
+% 1
+% 3
+% ​
+%  ).
+% Then
+
+% 𝑀
+% 3
+%  
+% 𝑀
+% 4
+% =
+% (
+% 4
+% ⋅
+% 4
+% +
+% 2
+% ⋅
+% 2
+% 4
+% ⋅
+% 1
+% +
+% 2
+% ⋅
+% 3
+% 1
+% ⋅
+% 4
+% +
+% 3
+% ⋅
+% 2
+% 1
+% ⋅
+% 1
+% +
+% 3
+% ⋅
+% 3
+% −
+% 1
+% ⋅
+% 4
+% +
+% 1
+% ⋅
+% 2
+% −
+% 1
+% ⋅
+% 1
+% +
+% 1
+% ⋅
+% 3
+% )
+% =
+% (
+% 16
+% +
+% 4
+% 4
+% +
+% 6
+% 4
+% +
+% 6
+% 1
+% +
+% 9
+% −
+% 4
+% +
+% 2
+% −
+% 1
+% +
+% 3
+% )
+% =
+% (
+% 20
+% 10
+% 10
+% 10
+% −
+% 2
+% 2
+% )
+% .
+% M 
+% 3
+% ​
+%  M 
+% 4
+% ​
+%  = 
+% ​
+  
+% 4⋅4+2⋅2
+% 1⋅4+3⋅2
+% −1⋅4+1⋅2
+% ​
+  
+% 4⋅1+2⋅3
+% 1⋅1+3⋅3
+% −1⋅1+1⋅3
+% ​
+  
+% ​
+%  = 
+% ​
+  
+% 16+4
+% 4+6
+% −4+2
+% ​
+  
+% 4+6
+% 1+9
+% −1+3
+% ​
+  
+% ​
+%  = 
+% ​
+  
+% 20
+% 10
+% −2
+% ​
+  
+% 10
+% 10
+% 2
+% ​
+  
+% ​
+%  .
+% 𝑀
+% 3
+% (
+% 3
+% ×
+% 2
+% )
+% ×
+% 𝑀
+% 5
+% (
+% 2
+% ×
+% 3
+% )
+%   
+% →
+%   
+% (
+% 3
+% ×
+% 3
+% )
+% M 
+% 3
+% ​
+%  (3×2)×M 
+% 5
+% ​
+%  (2×3)→(3×3).
+
+% 𝑀
+% 5
+% =
+% (
+% 2
+% −
+% 1
+% 1
+% 3
+% 1
+% −
+% 1
+% )
+% .
+% M 
+% 5
+% ​
+%  =( 
+% 2
+% 3
+% ​
+  
+% −1
+% 1
+% ​
+  
+% 1
+% −1
+% ​
+%  ).
+% 𝑀
+% 3
+%  
+% 𝑀
+% 5
+% =
+% (
+% 4
+% ⋅
+% 2
+% +
+% 2
+% ⋅
+% 3
+% 4
+% ⋅
+% (
+% −
+% 1
+% )
+% +
+% 2
+% ⋅
+% 1
+% 4
+% ⋅
+% 1
+% +
+% 2
+% ⋅
+% (
+% −
+% 1
+% )
+% 1
+% ⋅
+% 2
+% +
+% 3
+% ⋅
+% 3
+% 1
+% ⋅
+% (
+% −
+% 1
+% )
+% +
+% 3
+% ⋅
+% 1
+% 1
+% ⋅
+% 1
+% +
+% 3
+% ⋅
+% (
+% −
+% 1
+% )
+% −
+% 1
+% ⋅
+% 2
+% +
+% 1
+% ⋅
+% 3
+% −
+% 1
+% ⋅
+% (
+% −
+% 1
+% )
+% +
+% 1
+% ⋅
+% 1
+% −
+% 1
+% ⋅
+% 1
+% +
+% 1
+% ⋅
+% (
+% −
+% 1
+% )
+% )
+% =
+% (
+% 8
+% +
+% 6
+% −
+% 4
+% +
+% 2
+% 4
+% −
+% 2
+% 2
+% +
+% 9
+% −
+% 1
+% +
+% 3
+% 1
+% −
+% 3
+% −
+% 2
+% +
+% 3
+% 1
+% +
+% 1
+% −
+% 1
+% −
+% 1
+% )
+% =
+% (
+% 14
+% −
+% 2
+% 2
+% 11
+% 2
+% −
+% 2
+% 1
+% 2
+% −
+% 2
+% )
+% .
+% M 
+% 3
+% ​
+%  M 
+% 5
+% ​
+%  = 
+% ​
+  
+% 4⋅2+2⋅3
+% 1⋅2+3⋅3
+% −1⋅2+1⋅3
+% ​
+  
+% 4⋅(−1)+2⋅1
+% 1⋅(−1)+3⋅1
+% −1⋅(−1)+1⋅1
+% ​
+  
+% 4⋅1+2⋅(−1)
+% 1⋅1+3⋅(−1)
+% −1⋅1+1⋅(−1)
+% ​
+  
+% ​
+%  = 
+% ​
+  
+% 8+6
+% 2+9
+% −2+3
+% ​
+  
+% −4+2
+% −1+3
+% 1+1
+% ​
+  
+% 4−2
+% 1−3
+% −1−1
+% ​
+  
+% ​
+%  = 
+% ​
+  
+% 14
+% 11
+% 1
+% ​
+  
+% −2
+% 2
+% 2
+% ​
+  
+% 2
+% −2
+% −2
+% ​
+  
+% ​
+%  .
+% 𝑀
+% 4
+% (
+% 2
+% ×
+% 2
+% )
+% ×
+% 𝑀
+% 5
+% (
+% 2
+% ×
+% 3
+% )
+%   
+% →
+%   
+% (
+% 2
+% ×
+% 3
+% )
+% M 
+% 4
+% ​
+%  (2×2)×M 
+% 5
+% ​
+%  (2×3)→(2×3).
+
+% 𝑀
+% 4
+% =
+% (
+% 4
+% 1
+% 2
+% 3
+% )
+% ,
+% 𝑀
+% 5
+% =
+% (
+% 2
+% −
+% 1
+% 1
+% 3
+% 1
+% −
+% 1
+% )
+% .
+% M 
+% 4
+% ​
+%  =( 
+% 4
+% 2
+% ​
+  
+% 1
+% 3
+% ​
+%  ),M 
+% 5
+% ​
+%  =( 
+% 2
+% 3
+% ​
+  
+% −1
+% 1
+% ​
+  
+% 1
+% −1
+% ​
+%  ).
+% 𝑀
+% 4
+%  
+% 𝑀
+% 5
+% =
+% (
+% 4
+% ⋅
+% 2
+% +
+% 1
+% ⋅
+% 3
+% 4
+% ⋅
+% (
+% −
+% 1
+% )
+% +
+% 1
+% ⋅
+% 1
+% 4
+% ⋅
+% 1
+% +
+% 1
+% ⋅
+% (
+% −
+% 1
+% )
+% 2
+% ⋅
+% 2
+% +
+% 3
+% ⋅
+% 3
+% 2
+% ⋅
+% (
+% −
+% 1
+% )
+% +
+% 3
+% ⋅
+% 1
+% 2
+% ⋅
+% 1
+% +
+% 3
+% ⋅
+% (
+% −
+% 1
+% )
+% )
+% =
+% (
+% 8
+% +
+% 3
+% −
+% 4
+% +
+% 1
+% 4
+% −
+% 1
+% 4
+% +
+% 9
+% −
+% 2
+% +
+% 3
+% 2
+% −
+% 3
+% )
+% =
+% (
+% 11
+% −
+% 3
+% 3
+% 13
+% 1
+% −
+% 1
+% )
+% .
+% M 
+% 4
+% ​
+%  M 
+% 5
+% ​
+%  =( 
+% 4⋅2+1⋅3
+% 2⋅2+3⋅3
+% ​
+  
+% 4⋅(−1)+1⋅1
+% 2⋅(−1)+3⋅1
+% ​
+  
+% 4⋅1+1⋅(−1)
+% 2⋅1+3⋅(−1)
+% ​
+%  )=( 
+% 8+3
+% 4+9
+% ​
+  
+% −4+1
+% −2+3
+% ​
+  
+% 4−1
+% 2−3
+% ​
+%  )=( 
+% 11
+% 13
+% ​
+  
+% −3
+% 1
+% ​
+  
+% 3
+% −1
+% ​
+%  ).
+% 𝑀
+% 5
+% (
+% 2
+% ×
+% 3
+% )
+% ×
+% 𝑀
+% 1
+% (
+% 3
+% ×
+% 1
+% )
+%   
+% →
+%   
+% (
+% 2
+% ×
+% 1
+% )
+% M 
+% 5
+% ​
+%  (2×3)×M 
+% 1
+% ​
+%  (3×1)→(2×1).
+
+% 𝑀
+% 5
+% =
+% (
+% 2
+% −
+% 1
+% 1
+% 3
+% 1
+% −
+% 1
+% )
+% ,
+% 𝑀
+% 1
+% =
+% (
+% 1
+% 0
+% 1
+% )
+% .
+% M 
+% 5
+% ​
+%  =( 
+% 2
+% 3
+% ​
+  
+% −1
+% 1
+% ​
+  
+% 1
+% −1
+% ​
+%  ),M 
+% 1
+% ​
+%  = 
+% ​
+  
+% 1
+% 0
+% 1
+% ​
+  
+% ​
+%  .
+% 𝑀
+% 5
+%  
+% 𝑀
+% 1
+% =
+% (
+% 2
+% ⋅
+% 1
+% +
+% (
+% −
+% 1
+% )
+% ⋅
+% 0
+% +
+% 1
+% ⋅
+% 1
+% 3
+% ⋅
+% 1
+% +
+% 1
+% ⋅
+% 0
+% +
+% (
+% −
+% 1
+% )
+% ⋅
+% 1
+% )
+% =
+% (
+% 2
+% +
+% 0
+% +
+% 1
+% 3
+% +
+% 0
+% −
+% 1
+% )
+% =
+% (
+% 3
+% 2
+% )
+% .
+% M 
+% 5
+% ​
+%  M 
+% 1
+% ​
+%  =( 
+% 2⋅1+(−1)⋅0+1⋅1
+% 3⋅1+1⋅0+(−1)⋅1
+% ​
+%  )=( 
+% 2+0+1
+% 3+0−1
+% ​
+%  )=( 
+% 3
+% 2
+% ​
+%  ).
+% 𝑀
+% 5
+% (
+% 2
+% ×
+% 3
+% )
+% ×
+% 𝑀
+% 3
+% (
+% 3
+% ×
+% 2
+% )
+%   
+% →
+%   
+% (
+% 2
+% ×
+% 2
+% )
+% M 
+% 5
+% ​
+%  (2×3)×M 
+% 3
+% ​
+%  (3×2)→(2×2).
+
+% 𝑀
+% 3
+% =
+% (
+% 4
+% 2
+% 1
+% 3
+% −
+% 1
+% 1
+% )
+% .
+% M 
+% 3
+% ​
+%  = 
+% ​
+  
+% 4
+% 1
+% −1
+% ​
+  
+% 2
+% 3
+% 1
+% ​
+  
+% ​
+%  .
+% 𝑀
+% 5
+%  
+% 𝑀
+% 3
+% =
+% (
+% 2
+% ⋅
+% 4
+% +
+% (
+% −
+% 1
+% )
+% ⋅
+% 1
+% +
+% 1
+% ⋅
+% (
+% −
+% 1
+% )
+% 2
+% ⋅
+% 2
+% +
+% (
+% −
+% 1
+% )
+% ⋅
+% 3
+% +
+% 1
+% ⋅
+% 1
+% 3
+% ⋅
+% 4
+% +
+% 1
+% ⋅
+% 1
+% +
+% (
+% −
+% 1
+% )
+% ⋅
+% (
+% −
+% 1
+% )
+% 3
+% ⋅
+% 2
+% +
+% 1
+% ⋅
+% 3
+% +
+% (
+% −
+% 1
+% )
+% ⋅
+% 1
+% )
+% =
+% (
+% 8
+% −
+% 1
+% −
+% 1
+% 4
+% −
+% 3
+% +
+% 1
+% 12
+% +
+% 1
+% +
+% 1
+% 6
+% +
+% 3
+% −
+% 1
+% )
+% =
+% (
+% 6
+% 2
+% 14
+% 8
+% )
+% .
+% M 
+% 5
+% ​
+%  M 
+% 3
+% ​
+%  =( 
+% 2⋅4+(−1)⋅1+1⋅(−1)
+% 3⋅4+1⋅1+(−1)⋅(−1)
+% ​
+  
+% 2⋅2+(−1)⋅3+1⋅1
+% 3⋅2+1⋅3+(−1)⋅1
+% ​
+%  )=( 
+% 8−1−1
+% 12+1+1
+% ​
+  
+% 4−3+1
+% 6+3−1
+% ​
+%  )=( 
+% 6
+% 14
+% ​
+  
+% 2
+% 8
+% ​
+%  ).
+% 𝑀
+% 5
+% (
+% 2
+% ×
+% 3
+% )
+% ×
+% 𝑀
+% 6
+% (
+% 3
+% ×
+% 3
+% )
+%   
+% →
+%   
+% (
+% 2
+% ×
+% 3
+% )
+% M 
+% 5
+% ​
+%  (2×3)×M 
+% 6
+% ​
+%  (3×3)→(2×3).
+
+% 𝑀
+% 6
+% =
+% (
+% 1
+% 2
+% 1
+% 2
+% 3
+% 2
+% 3
+% 4
+% 3
+% )
+% .
+% M 
+% 6
+% ​
+%  = 
+% ​
+  
+% 1
+% 2
+% 3
+% ​
+  
+% 2
+% 3
+% 4
+% ​
+  
+% 1
+% 2
+% 3
+% ​
+  
+% ​
+%  .
+% 𝑀
+% 5
+%  
+% 𝑀
+% 6
+% =
+% (
+% 2
+% ⋅
+% 1
+% +
+% (
+% −
+% 1
+% )
+% ⋅
+% 2
+% +
+% 1
+% ⋅
+% 3
+% 2
+% ⋅
+% 2
+% +
+% (
+% −
+% 1
+% )
+% ⋅
+% 3
+% +
+% 1
+% ⋅
+% 4
+% 2
+% ⋅
+% 1
+% +
+% (
+% −
+% 1
+% )
+% ⋅
+% 2
+% +
+% 1
+% ⋅
+% 3
+% 3
+% ⋅
+% 1
+% +
+% 1
+% ⋅
+% 2
+% +
+% (
+% −
+% 1
+% )
+% ⋅
+% 3
+% 3
+% ⋅
+% 2
+% +
+% 1
+% ⋅
+% 3
+% +
+% (
+% −
+% 1
+% )
+% ⋅
+% 4
+% 3
+% ⋅
+% 1
+% +
+% 1
+% ⋅
+% 2
+% +
+% (
+% −
+% 1
+% )
+% ⋅
+% 3
+% )
+% =
+% (
+% 2
+% −
+% 2
+% +
+% 3
+% 4
+% −
+% 3
+% +
+% 4
+% 2
+% −
+% 2
+% +
+% 3
+% 3
+% +
+% 2
+% −
+% 3
+% 6
+% +
+% 3
+% −
+% 4
+% 3
+% +
+% 2
+% −
+% 3
+% )
+% =
+% (
+% 3
+% 5
+% 3
+% 2
+% 5
+% 2
+% )
+% .
+% M 
+% 5
+% ​
+%  M 
+% 6
+% ​
+%  =( 
+% 2⋅1+(−1)⋅2+1⋅3
+% 3⋅1+1⋅2+(−1)⋅3
+% ​
+  
+% 2⋅2+(−1)⋅3+1⋅4
+% 3⋅2+1⋅3+(−1)⋅4
+% ​
+  
+% 2⋅1+(−1)⋅2+1⋅3
+% 3⋅1+1⋅2+(−1)⋅3
+% ​
+%  )=( 
+% 2−2+3
+% 3+2−3
+% ​
+  
+% 4−3+4
+% 6+3−4
+% ​
+  
+% 2−2+3
+% 3+2−3
+% ​
+%  )=( 
+% 3
+% 2
+% ​
+  
+% 5
+% 5
+% ​
+  
+% 3
+% 2
+% ​
+%  ).
+% 𝑀
+% 6
+% (
+% 3
+% ×
+% 3
+% )
+% ×
+% 𝑀
+% 1
+% (
+% 3
+% ×
+% 1
+% )
+%   
+% →
+%   
+% (
+% 3
+% ×
+% 1
+% )
+% M 
+% 6
+% ​
+%  (3×3)×M 
+% 1
+% ​
+%  (3×1)→(3×1).
+
+% 𝑀
+% 6
+% =
+% (
+% 1
+% 2
+% 1
+% 2
+% 3
+% 2
+% 3
+% 4
+% 3
+% )
+% ,
+% 𝑀
+% 1
+% =
+% (
+% 1
+% 0
+% 1
+% )
+% .
+% M 
+% 6
+% ​
+%  = 
+% ​
+  
+% 1
+% 2
+% 3
+% ​
+  
+% 2
+% 3
+% 4
+% ​
+  
+% 1
+% 2
+% 3
+% ​
+  
+% ​
+%  ,M 
+% 1
+% ​
+%  = 
+% ​
+  
+% 1
+% 0
+% 1
+% ​
+  
+% ​
+%  .
+% 𝑀
+% 6
+%  
+% 𝑀
+% 1
+% =
+% (
+% 1
+% ⋅
+% 1
+% +
+% 2
+% ⋅
+% 0
+% +
+% 1
+% ⋅
+% 1
+% 2
+% ⋅
+% 1
+% +
+% 3
+% ⋅
+% 0
+% +
+% 2
+% ⋅
+% 1
+% 3
+% ⋅
+% 1
+% +
+% 4
+% ⋅
+% 0
+% +
+% 3
+% ⋅
+% 1
+% )
+% =
+% (
+% 2
+% 4
+% 6
+% )
+% .
+% M 
+% 6
+% ​
+%  M 
+% 1
+% ​
+%  = 
+% ​
+  
+% 1⋅1+2⋅0+1⋅1
+% 2⋅1+3⋅0+2⋅1
+% 3⋅1+4⋅0+3⋅1
+% ​
+  
+% ​
+%  = 
+% ​
+  
+% 2
+% 4
+% 6
+% ​
+  
+% ​
+%  .
+% 𝑀
+% 6
+% (
+% 3
+% ×
+% 3
+% )
+% ×
+% 𝑀
+% 3
+% (
+% 3
+% ×
+% 2
+% )
+%   
+% →
+%   
+% (
+% 3
+% ×
+% 2
+% )
+% M 
+% 6
+% ​
+%  (3×3)×M 
+% 3
+% ​
+%  (3×2)→(3×2).
+
+% 𝑀
+% 3
+% =
+% (
+% 4
+% 2
+% 1
+% 3
+% −
+% 1
+% 1
+% )
+% .
+% M 
+% 3
+% ​
+%  = 
+% ​
+  
+% 4
+% 1
+% −1
+% ​
+  
+% 2
+% 3
+% 1
+% ​
+  
+% ​
+%  .
+% 𝑀
+% 6
+%  
+% 𝑀
+% 3
+% =
+% (
+% 1
+% ⋅
+% 4
+% +
+% 2
+% ⋅
+% 1
+% +
+% 1
+% ⋅
+% (
+% −
+% 1
+% )
+% 1
+% ⋅
+% 2
+% +
+% 2
+% ⋅
+% 3
+% +
+% 1
+% ⋅
+% 1
+% 2
+% ⋅
+% 4
+% +
+% 3
+% ⋅
+% 1
+% +
+% 2
+% ⋅
+% (
+% −
+% 1
+% )
+% 2
+% ⋅
+% 2
+% +
+% 3
+% ⋅
+% 3
+% +
+% 2
+% ⋅
+% 1
+% 3
+% ⋅
+% 4
+% +
+% 4
+% ⋅
+% 1
+% +
+% 3
+% ⋅
+% (
+% −
+% 1
+% )
+% 3
+% ⋅
+% 2
+% +
+% 4
+% ⋅
+% 3
+% +
+% 3
+% ⋅
+% 1
+% )
+% =
+% (
+% 4
+% +
+% 2
+% −
+% 1
+% 2
+% +
+% 6
+% +
+% 1
+% 8
+% +
+% 3
+% −
+% 2
+% 4
+% +
+% 9
+% +
+% 2
+% 12
+% +
+% 4
+% −
+% 3
+% 6
+% +
+% 12
+% +
+% 3
+% )
+% =
+% (
+% 5
+% 9
+% 9
+% 15
+% 13
+% 21
+% )
+% .
+% M 
+% 6
+% ​
+%  M 
+% 3
+% ​
+%  = 
+% ​
+  
+% 1⋅4+2⋅1+1⋅(−1)
+% 2⋅4+3⋅1+2⋅(−1)
+% 3⋅4+4⋅1+3⋅(−1)
+% ​
+  
+% 1⋅2+2⋅3+1⋅1
+% 2⋅2+3⋅3+2⋅1
+% 3⋅2+4⋅3+3⋅1
+% ​
+  
+% ​
+%  = 
+% ​
+  
+% 4+2−1
+% 8+3−2
+% 12+4−3
+% ​
+  
+% 2+6+1
+% 4+9+2
+% 6+12+3
+% ​
+  
+% ​
+%  = 
+% ​
+  
+% 5
+% 9
+% 13
+% ​
+  
+% 9
+% 15
+% 21
+% ​
+  
+% ​
+%  .
+% All other products 
+% 𝑀
+% 𝑖
+% 𝑀
+% 𝑗
+% M 
+% i
+% ​
+%  M 
+% j
+% ​
+%   are undefined (inner dimensions mismatch).
+
+\[
+M_1 = \begin{pmatrix} 1 \\ 0 \\ 1 \end{pmatrix} \quad (3 \times 1), \qquad
+M_2 = \begin{pmatrix} 2 & -1 & 3 \end{pmatrix} \quad (1 \times 3), \qquad
+M_3 = \begin{pmatrix} 4 & 1 \\ 1 & 3 \\ -1 & 1 \end{pmatrix} \quad (3 \times 2),
+\]
+\[
+M_4 = \begin{pmatrix} 4 & 1 \\ 2 & 3 \end{pmatrix} \quad (2 \times 2), \qquad
+M_5 = \begin{pmatrix} 2 & -1 & 1 \\ 3 & 1 & -1 \end{pmatrix} \quad (2 \times 3), \qquad
+M_6 = \begin{pmatrix} 1 & 2 & 1 \\ 2 & 3 & 2 \\ 3 & 4 & 3 \end{pmatrix} \quad (3 \times 3).
+\]
+
+We can compute \( M_i M_j \) only when the number of columns of \( M_i \) equals the number of rows of \( M_j \).
+
+\begin{itemize}
+    \item \( M_1 (3 \times 1) \times M_2 (1 \times 3) \to (3 \times 3) \):
+    \[
+    M_1 M_2 = \begin{pmatrix} 1 \\ 0 \\ 1 \end{pmatrix} \begin{pmatrix} 2 & -1 & 3 \end{pmatrix}
+    = \begin{pmatrix}
+        2 & -1 & 3 \\
+        0 & 0 & 0 \\
+        2 & -1 & 3
+    \end{pmatrix}
+    \]
+    \item \( M_2 (1 \times 3) \times M_1 (3 \times 1) \to (1 \times 1) \):
+    \[
+    M_2 M_1 = 2 \cdot 1 + (-1) \cdot 0 + 3 \cdot 1 = 5
+    \]
+    \item \( M_2 (1 \times 3) \times M_3 (3 \times 2) \to (1 \times 2) \):
+    \[
+    M_2 M_3 = \begin{pmatrix} 2 & -1 & 3 \end{pmatrix} \begin{pmatrix} 4 & 1 \\ 1 & 3 \\ -1 & 1 \end{pmatrix}
+    = \begin{pmatrix}
+        2 \cdot 4 + (-1) \cdot 1 + 3 \cdot (-1) & 2 \cdot 1 + (-1) \cdot 3 + 3 \cdot 1
+    \end{pmatrix}
+    = \begin{pmatrix}
+        8 - 1 - 3 & 2 - 3 + 3
+    \end{pmatrix}
+    = \begin{pmatrix}
+        4 & 2
+    \end{pmatrix}
+    \]
+    \item \( M_2 (1 \times 3) \times M_6 (3 \times 3) \to (1 \times 3) \):
+    \[
+    M_2 M_6 = \begin{pmatrix} 2 & -1 & 3 \end{pmatrix}
+    \begin{pmatrix}
+        1 & 2 & 1 \\
+        2 & 3 & 2 \\
+        3 & 4 & 3
+    \end{pmatrix}
+    = \begin{pmatrix}
+        2 \cdot 1 + (-1) \cdot 2 + 3 \cdot 3, &
+        2 \cdot 2 + (-1) \cdot 3 + 3 \cdot 4, &
+        2 \cdot 1 + (-1) \cdot 2 + 3 \cdot 3
+    \end{pmatrix}
+    = \begin{pmatrix}
+        2 - 2 + 9, & 4 - 3 + 12, & 2 - 2 + 9
+    \end{pmatrix}
+    = \begin{pmatrix}
+        9 & 13 & 9
+    \end{pmatrix}
+    \]
+    \item \( M_3 (3 \times 2) \times M_4 (2 \times 2) \to (3 \times 2) \):
+    \[
+    M_3 M_4 = \begin{pmatrix} 4 & 1 \\ 1 & 3 \\ -1 & 1 \end{pmatrix} \begin{pmatrix} 4 & 1 \\ 2 & 3 \end{pmatrix}
+    = \begin{pmatrix}
+        4 \cdot 4 + 1 \cdot 2 & 4 \cdot 1 + 1 \cdot 3 \\
+        1 \cdot 4 + 3 \cdot 2 & 1 \cdot 1 + 3 \cdot 3 \\
+        -1 \cdot 4 + 1 \cdot 2 & -1 \cdot 1 + 1 \cdot 3
+    \end{pmatrix}
+    = \begin{pmatrix}
+        16 + 2 & 4 + 3 \\
+        4 + 6 & 1 + 9 \\
+        -4 + 2 & -1 + 3
+    \end{pmatrix}
+    = \begin{pmatrix}
+        18 & 7 \\
+        10 & 10 \\
+        -2 & 2
+    \end{pmatrix}
+    \]
+    \item \( M_3 (3 \times 2) \times M_5 (2 \times 3) \to (3 \times 3) \):
+    \[
+    M_3 M_5 = \begin{pmatrix} 4 & 1 \\ 1 & 3 \\ -1 & 1 \end{pmatrix} \begin{pmatrix} 2 & -1 & 1 \\ 3 & 1 & -1 \end{pmatrix}
+    \]
+    Compute each entry:
+    \[
+    \begin{pmatrix}
+        4 \cdot 2 + 1 \cdot 3 & 4 \cdot (-1) + 1 \cdot 1 & 4 \cdot 1 + 1 \cdot (-1) \\
+        1 \cdot 2 + 3 \cdot 3 & 1 \cdot (-1) + 3 \cdot 1 & 1 \cdot 1 + 3 \cdot (-1) \\
+        -1 \cdot 2 + 1 \cdot 3 & -1 \cdot (-1) + 1 \cdot 1 & -1 \cdot 1 + 1 \cdot (-1)
+    \end{pmatrix}
+    = \begin{pmatrix}
+        8 + 3 & -4 + 1 & 4 - 1 \\
+        2 + 9 & -1 + 3 & 1 - 3 \\
+        -2 + 3 & 1 + 1 & -1 - 1
+    \end{pmatrix}
+    = \begin{pmatrix}
+        11 & -3 & 3 \\
+        11 & 2 & -2 \\
+        1 & 2 & -2
+    \end{pmatrix}
+    \]
+    \item \( M_4 (2 \times 2) \times M_5 (2 \times 3) \to (2 \times 3) \):
+    \[
+    M_4 M_5 = \begin{pmatrix} 4 & 1 \\ 2 & 3 \end{pmatrix} \begin{pmatrix} 2 & -1 & 1 \\ 3 & 1 & -1 \end{pmatrix}
+    \]
+    Compute each entry:
+    \[
+    \begin{pmatrix}
+        4 \cdot 2 + 1 \cdot 3 & 4 \cdot (-1) + 1 \cdot 1 & 4 \cdot 1 + 1 \cdot (-1) \\
+        2 \cdot 2 + 3 \cdot 3 & 2 \cdot (-1) + 3 \cdot 1 & 2 \cdot 1 + 3 \cdot (-1)
+    \end{pmatrix}
+    = \begin{pmatrix}
+        8 + 3 & -4 + 1 & 4 - 1 \\
+        4 + 9 & -2 + 3 & 2 - 3
+    \end{pmatrix}
+    = \begin{pmatrix}
+        11 & -3 & 3 \\
+        13 & 1 & -1
+    \end{pmatrix}
+    \]
+    \item \( M_5 (2 \times 3) \times M_1 (3 \times 1) \to (2 \times 1) \):
+    \[
+    M_5 M_1 = \begin{pmatrix} 2 & -1 & 1 \\ 3 & 1 & -1 \end{pmatrix} \begin{pmatrix} 1 \\ 0 \\ 1 \end{pmatrix}
+    = \begin{pmatrix}
+        2 \cdot 1 + (-1) \cdot 0 + 1 \cdot 1 \\
+        3 \cdot 1 + 1 \cdot 0 + (-1) \cdot 1
+    \end{pmatrix}
+    = \begin{pmatrix}
+        2 + 0 + 1 \\
+        3 + 0 - 1
+    \end{pmatrix}
+    = \begin{pmatrix}
+        3 \\
+        2
+    \end{pmatrix}
+    \]
+    \item \( M_5 (2 \times 3) \times M_3 (3 \times 2) \to (2 \times 2) \):
+    \[
+    M_5 M_3 = \begin{pmatrix} 2 & -1 & 1 \\ 3 & 1 & -1 \end{pmatrix} \begin{pmatrix} 4 & 1 \\ 1 & 3 \\ -1 & 1 \end{pmatrix}
+    \]
+    Compute each entry:
+    \[
+    \begin{pmatrix}
+        2 \cdot 4 + (-1) \cdot 1 + 1 \cdot (-1) & 2 \cdot 1 + (-1) \cdot 3 + 1 \cdot 1 \\
+        3 \cdot 4 + 1 \cdot 1 + (-1) \cdot (-1) & 3 \cdot 1 + 1 \cdot 3 + (-1) \cdot 1
+    \end{pmatrix}
+    = \begin{pmatrix}
+        8 - 1 - 1 & 2 - 3 + 1 \\
+        12 + 1 + 1 & 3 + 3 - 1
+    \end{pmatrix}
+    = \begin{pmatrix}
+        6 & 0 \\
+        14 & 5
+    \end{pmatrix}
+    \]
+    \item \( M_5 (2 \times 3) \times M_6 (3 \times 3) \to (2 \times 3) \):
+    \[
+    M_5 M_6 = \begin{pmatrix} 2 & -1 & 1 \\ 3 & 1 & -1 \end{pmatrix}
+    \begin{pmatrix}
+        1 & 2 & 1 \\
+        2 & 3 & 2 \\
+        3 & 4 & 3
+    \end{pmatrix}
+    \]
+    Compute each entry:
+    \[
+    \begin{pmatrix}
+        2 \cdot 1 + (-1) \cdot 2 + 1 \cdot 3 & 2 \cdot 2 + (-1) \cdot 3 + 1 \cdot 4 & 2 \cdot 1 + (-1) \cdot 2 + 1 \cdot 3 \\
+        3 \cdot 1 + 1 \cdot 2 + (-1) \cdot 3 & 3 \cdot 2 + 1 \cdot 3 + (-1) \cdot 4 & 3 \cdot 1 + 1 \cdot 2 + (-1) \cdot 3
+    \end{pmatrix}
+    = \begin{pmatrix}
+        2 - 2 + 3 & 4 - 3 + 4 & 2 - 2 + 3 \\
+        3 + 2 - 3 & 6 + 3 - 4 & 3 + 2 - 3
+    \end{pmatrix}
+    = \begin{pmatrix}
+        3 & 5 & 3 \\
+        2 & 5 & 2
+    \end{pmatrix}
+    \]
+    \item \( M_6 (3 \times 3) \times M_1 (3 \times 1) \to (3 \times 1) \):
+    \[
+    M_6 M_1 = \begin{pmatrix} 1 & 2 & 1 \\ 2 & 3 & 2 \\ 3 & 4 & 3 \end{pmatrix} \begin{pmatrix} 1 \\ 0 \\ 1 \end{pmatrix}
+    = \begin{pmatrix}
+        1 \cdot 1 + 2 \cdot 0 + 1 \cdot 1 \\
+        2 \cdot 1 + 3 \cdot 0 + 2 \cdot 1 \\
+        3 \cdot 1 + 4 \cdot 0 + 3 \cdot 1
+    \end{pmatrix}
+    = \begin{pmatrix}
+        2 \\
+        4 \\
+        6
+    \end{pmatrix}
+    \]
+    \item \( M_6 (3 \times 3) \times M_3 (3 \times 2) \to (3 \times 2) \):
+    \[
+    M_6 M_3 = \begin{pmatrix} 1 & 2 & 1 \\ 2 & 3 & 2 \\ 3 & 4 & 3 \end{pmatrix} \begin{pmatrix} 4 & 1 \\ 1 & 3 \\ -1 & 1 \end{pmatrix}
+    \]
+    Compute each entry:
+    \[
+    \begin{pmatrix}
+        1 \cdot 4 + 2 \cdot 1 + 1 \cdot (-1) & 1 \cdot 1 + 2 \cdot 3 + 1 \cdot 1 \\
+        2 \cdot 4 + 3 \cdot 1 + 2 \cdot (-1) & 2 \cdot 1 + 3 \cdot 3 + 2 \cdot 1 \\
+        3 \cdot 4 + 4 \cdot 1 + 3 \cdot (-1) & 3 \cdot 1 + 4 \cdot 3 + 3 \cdot 1
+    \end{pmatrix}
+    = \begin{pmatrix}
+        4 + 2 - 1 & 1 + 6 + 1 \\
+        8 + 3 - 2 & 2 + 9 + 2 \\
+        12 + 4 - 3 & 3 + 12 + 3
+    \end{pmatrix}
+    = \begin{pmatrix}
+        5 & 8 \\
+        9 & 13 \\
+        13 & 18
+    \end{pmatrix}
+    \]
+\end{itemize}
+
+All other products \( M_i M_j \) are undefined (inner dimensions mismatch).
+
+
 
 \end{document}
