--- a/math2/hw8/main.tex
+++ b/math2/hw8/main.tex
@@ -191,4 +191,51 @@ If $\lambda^2 = 1$, then we have two cases:
     which is also not invertible because \(r_1 = -r_2\).
 \end{itemize}
 
+\section*{Problem 3}
+We know that if determinant is zero if and only if the matrix is not invertible. So lets calculate the determinant.
+\begin{align*}
+    C &= \begin{pmatrix}
+        13 & 7 & 6 \\
+        -7 & 1 & 1 \\
+        3 & 8 & 7
+    \end{pmatrix} \\
+    \det(C) &= 13 \det \begin{pmatrix}
+        1 & 1 \\
+        8 & 7
+    \end{pmatrix} - 7 \det \begin{pmatrix}
+        -7 & 1 \\
+        3 & 7
+    \end{pmatrix} + 6 \det \begin{pmatrix}
+        -7 & 1 \\
+        3 & 8
+    \end{pmatrix} \\
+    &= 13(1 \cdot 7 - 1 \cdot 8) - 7(-7 \cdot 7 - 1 \cdot 3) + 6(-7 \cdot 8 - 1 \cdot 3) \\
+    &= 13(-1) - 7(-49 - 3) + 6(-56 - 3) \\
+    &= 13(-1) - 7(-52) + 6(-59) \\
+    &= -13 + 364 - 354 \\
+    &= -13 + 10 = -3
+\end{align*}
+
+\(\det(C) = -3 \equiv 1 \mod 2\) so if p = 2, then the matrix is invertible. \\
+\(\det(C) = -3 \equiv 0 \mod 3\) so if p = 3, then the matrix is not invertible. \\
+\(\det(C) = -3 \equiv 2 \mod 5\) so if p = 5, then the matrix is invertible. \\
+
+Lets calculate the inverse using elementary row operations:
+\begin{align*}
+    \left(
+    \begin{array}{ccc|ccc}
+        13 & 7 & 6 & 1 & 0 & 0 \\
+        -7 & 1 & 1 & 0 & 1 & 0 \\
+        3 & 8 & 7 & 0 & 0 & 1
+    \end{array}
+    \right) \\
+    \left(
+    \begin{array}{ccc|ccc}
+        13 & 7        & 6        & 1 & 0    & 0 \\
+        0  & 13/7 + 7 & 13/7 + 6 & 1 & 13/7 & 0 \\
+        0  & 8.(-13/3) + 7        & 7.(-13/3) + 6        & 1 & 0    & -13/3
+    \end{array}
+    \right) r_2 = 13/7 r_2 + r_1, r_3 = -13/3r_3 + r_1 \\
+\end{align*}
+
 \end{document}
