--- a/math2/hw9/main.tex
+++ b/math2/hw9/main.tex
@@ -136,5 +136,66 @@ D = \begin{pmatrix}
 \end{pmatrix}
 \end{align*}
 
+\section*{Problem 2}
+We can write the equations in matrix form as follows:
+\begin{align*}
+\begin{pmatrix}
+2 & -3 & -1 & 1 \\
+3 & 4 & -4 & -3 \\
+0 & 17 & -5 & -9
+\end{pmatrix}
+\begin{pmatrix}
+x_1 \\
+x_2 \\
+x_3 \\
+x_4
+\end{pmatrix}
+=
+\begin{pmatrix}
+0 \\
+0 \\
+0
+\end{pmatrix}
+\end{align*}
+
+To find the nontrivial solutions, we can row reduce the matrix to echelon form.
+\begin{align*}
+\begin{pmatrix}
+2 & -3 & -1 & 1 \\
+3 & 4 & -4 & -3 \\
+0 & 17 & -5 & -9
+\end{pmatrix} & r_2 = 2r_2 - 3r_1 \\
+\begin{pmatrix}
+2 & -3 & -1 & 1 \\
+0 & 17 & -5 & -9 \\
+0 & 17 & -5 & -9
+\end{pmatrix} & r_3 = r_3 - r_2 \\
+\begin{pmatrix}
+2 & -3 & -1 & 1 \\
+0 & 17 & -5 & -9 \\
+0 & 0 & 0 & 0
+\end{pmatrix}
+\end{align*}
+
+Which gives us the following system of equations:
+\begin{align*}
+2x_1 - 3x_2 - x_3 + x_4 &= 0 \\
+17x_2 - 5x_3 - 9x_4 &= 0
+\end{align*}
+
+Let \(x_3 = \lambda\) and \(x_4 = \mu\) then we can express \(x_1\) and \(x_2\) in terms of \(\lambda\) and \(\mu\):
+\begin{align*}
+x_2 &= \frac{5\lambda + 9\mu}{17} \\
+x_1 &= \frac{3x_2 + x_3 - x_4}{2} = \frac{3\left(\frac{5\lambda + 9\mu}{17}\right) + \lambda - \mu}{2}
+\end{align*}
+Thus, the general solution can be expressed as:
+\begin{align*}
+\begin{pmatrix}
+\frac{3\left(\frac{5\lambda + 9\mu}{17}\right) + \lambda - \mu}{2} \\
+\frac{5\lambda + 9\mu}{17} \\
+\lambda \\
+\mu
+\end{pmatrix} & \lambda, \mu \in \mathbb{R}
+\end{align*}
 
 \end{document}
