--- a/math2/hw9/main.tex
+++ b/math2/hw9/main.tex
@@ -226,4 +226,64 @@ Expand along the first row:
     &= a^2 + b^2 + c^2 + 1
 \end{align*}
 
+\section*{Problem 5}
+If we can find a basis consistiong of eigenvectors for the matrix, then the matrix is diagonalizable.
+Lets first calculate the eigenvalues:
+\begin{align*}
+\det\begin{pmatrix}
+-3 - \lambda & 4 \\
+-1 & 1 - \lambda
+\end{pmatrix} = (-3 - \lambda)(1 - \lambda) + 4 = \lambda^2 + 2\lambda + 1 = (\lambda + 1)^2
+\end{align*}
+
+\[
+    E_{-1} = \ker\begin{pmatrix}
+                    -2 & 4 \\
+                    -1 & 2
+                \end{pmatrix} = \ker\begin{pmatrix}
+                    1 & -2 \\
+                    0 & 0
+                \end{pmatrix} = \text{span}\left\{\begin{pmatrix}
+                    2 \\
+                    1
+                \end{pmatrix}\right\}
+\]
+Which is not enough to form a basis because the dimension of the eigenspace is 1, but the matrix is \(2 \times 2\).
+So the first matrix is not diagonalizable over \(\mathbb{Q}\), \(\mathbb{R}\) or \(\mathbb{C}\).
+\\
+\\
+The second matrix:
+\begin{align*}
+\det\begin{pmatrix}
+-3 - \lambda & 1 \\
+-2 & -1 - \lambda
+\end{pmatrix} = (-3 - \lambda)(-1 - \lambda) + 2 = \lambda^2 + 4\lambda + 5
+\end{align*}
+The discriminant of the characteristic polynomial is \(-4\), which means the eigenvalues are complex. And since the eigenvalues are dsitinct,
+and we get at least one eigenvector per eigenvalue, we can find two linearly independent eigenvectors. Which means that the second matrix is diagonalizable over \(\mathbb{C}\)
+but not over \(\mathbb{R}\) or \(\mathbb{Q}\).
+\\
+\\
+The third matrix:
+\begin{align*}
+\det\begin{pmatrix}
+-3 - \lambda & 3 \\
+2 & -2 - \lambda
+\end{pmatrix} = (-3 - \lambda)(-2 - \lambda) - 6 = \lambda^2 + 5\lambda + 0 = \lambda(\lambda + 5)
+\end{align*}
+We get two distinct eigenvalues, \(\lambda_1 = 0\) and \(\lambda_2 = -5\). The matrix is diagonalizable over \(\mathbb{Q}\), \(\mathbb{R}\) and \(\mathbb{C}\).
+\\
+\\
+The fourth matrix:
+\begin{align*}
+\det\begin{pmatrix}
+2 - \lambda & -1 \\
+-1 & 3 - \lambda
+\end{pmatrix} = (2 - \lambda)(3 - \lambda) - 1 = \lambda^2 - 5\lambda + 5
+\end{align*}
+
+Solving the quadratic equation yields to \(\lambda = \frac{5 \pm \sqrt{5}}{2}\), which are distinct real eigenvalues.
+The matrix is diagonalizable over \(\mathbb{R}\) and \(\mathbb{C}\) but not over \(\mathbb{Q}\) since the eigenvalues are not rational.
+
+
 \end{document}
